fix for ipad vertical - centerpiece was aligned left even though the background was hidden. fix was to align center

--- a/public_html/assets/css/styles.css
+++ b/public_html/assets/css/styles.css
@@ -247,7 +247,7 @@ section#welcome .content-wrap.hide-elements-when-short svg {display:none;}
 .home-page--v2 section#welcome .logogroup svg {background:transparent; border:0 none;}
 .home-page--v2 section#welcome .content-wrap svg #Arrow {fill:#000;}
 
-@media screen and (min-width:768px) {
+@media screen and (min-width:960px) {
     .home-page--v2 section#welcome .logogroup {display:inline-block; margin:0 10px;}
 }
 
